# gsoc-ntp-2013

./: CommitLog  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
adjtimed/: Makefile.in
clockstuff/: Makefile.in
include/: Makefile.in
include/isc/: Makefile.in
kernel/: Makefile.in
kernel/sys/: Makefile.in
libntp/: Makefile.in
libparse/: Makefile.in
ntpd/: Makefile.am  Makefile.in  main.c  ntpd.c
ntpdate/: Makefile.in
ntpdc/: Makefile.in
ntpq/: Makefile.in
ntpsnmpd/: Makefile.in
parseutil/: Makefile.in
scripts/: Makefile.in
sntp/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  main.c  sntp.c  sntp.h
sntp/include/: Makefile.in  version.def  version.texi
sntp/libopts/: Makefile.in
sntp/m4/: version.m4
sntp/scripts/: Makefile.in
sntp/tests/: Makefile.in  packetHandling.cpp  utilities.cpp
tests/: Makefile.am  Makefile.in
tests/libntp/: Makefile.am  Makefile.in  authkeys.cpp  authreadkeys.cpp  emalloc.cpp  msyslog.cpp  strl_obsd.cpp
tests/ntpd/: Makefile.am  cmd_args.cpp  ntp_config.cpp  ntp_control.cpp  ntp_filegen.cpp  ntp_monitor.cpp  ntp_peer.cpp  ntpdtest.cpp  ntpdtest.h
util/: Makefile.in
